# hermes-egress-guard

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
egress_guard/: __init__.py  cli.py  egress_guard.py  guardrails.template.yaml  hook_entry.py
tests/: test_egress_guard.py
